# ReverseURCACelcatAPI

./: .env.example  Dockerfile  README.md  __main__.py  pyproject.toml  scalar.html
.github/workflows/: deployment.yaml
src/: app.py  config.py
src/client/: __init__.py  cas.py  client.py  config.py  exceptions.py
src/components/: blueprint.py  cache.py  errors.py  middleware.py  ratelimit.py  response.py  rules.py  statistics.py
src/models/exceptions/: __init__.py
src/models/responses/: __init__.py
src/routes/v1/: __init__.py
src/routes/v1/agenda/: v1_agenda.py
src/routes/v1/service/: v1_service.py
src/utils/: xml_to_ics.py
